# api-livraria

./: .gitignore  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_author_alter_category_options_and_more.py  0003_book.py  0004_alter_book_options_book_authors.py  0005_purchase.py  0006_itemspurchase.py
core/views/: __init__.py  authors.py  books.py  categories.py  publishers.py  purchases.py
livraria/: settings.py  urls.py
